<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".MainActivity">

    <!-- Заголовок игры -->
    <TextView
        android:id="@+id/titleTextView"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Контейнер для счета и рекорда -->
    <LinearLayout
        android:id="@+id/scoreContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/score_margin_top"
        android:layout_marginEnd="@dimen/main_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <!-- Текущий счет -->
        <TextView
            android:id="@+id/scoreTextView"
            style="@style/ScoreStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score" />

        <!-- Разделитель -->
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <!-- Лучший результат -->
        <TextView
            android:id="@+id/bestScoreTextView"
            style="@style/ScoreStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/best_score" />
    </LinearLayout>

    <!-- Кнопка новой игры -->
    <Button
        android:id="@+id/newGameButton"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreContainer" />

    <!-- Игровое поле -->
    <com.example.game2048.GameView
        android:id="@+id/gameView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/game_view_margin_top"
        android:layout_marginEnd="@dimen/main_margin"
        android:layout_marginBottom="@dimen/game_view_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton"
        app:layout_constraintVertical_bias="0.3" />

    <!-- Инструкции по игре -->
    <TextView
        android:id="@+id/instructionsTextView"
        style="@style/InstructionsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/instructions_margin_top"
        android:layout_marginEnd="@dimen/main_margin"
        android:text="@string/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameView" />

</androidx.constraintlayout.widget.ConstraintLayout>